# Anomaly-Detection-Production-Ready

./: .env.example  .gitignore  MASTER_LOGIC_FLOW.md  README.md  compose.yaml  makefile  pyproject.toml
animations/: main.py  pyproject.toml
config/: config.py
dags/: batch_feature_pipeline_dag.py
data/: api_config.py  create_data.py  create_synthetic_sdv.py  synthetic_data_sdv.parquet  synthetic_dataset_final.csv  synthetic_dataset_final_2.csv  test_data.csv
data/create_datasets/: create_parquet_datasets.py
data/registry/: registry.db
data/synthetic_data_creation/: create_synthetic_sdv.py
docs/: MLOPS_2.drawio
model/: __init__.py  config_model.py  train.py
models/: isolation_forest_model.pkl  scaler.pkl
services/: dockerfile.spark_services
services/airflow_service/: Dockerfile
services/batch_pipeline_service/config/: config.py
services/batch_pipeline_service/src/: batch_pipeline.py  config.yaml
services/create_datasets_service/: Dockerfile  README.md  pyproject.toml
services/create_datasets_service/config/: __init__.py  config.py
services/data_engineering_service/: README.md
services/feature_loader_service/: dockerfile
services/feature_store_service/: README.md  TEST_FEAST.MD  dockerfile  pyproject.toml
services/historical_ingestion_service/: dockerfile
services/if_anomaly_service/: README.md  pyproject.toml
services/inference_service/: README.md  anomaly_severity_classificator.py  dockerfile  pyproject.toml
services/inference_service/config/: config.py
services/inference_service/src/: app.py
services/ingestion_rag_service/: Dockerfile  README.md  pyproject.toml
services/ingestion_rag_service/src/: ingestion.py
services/ingestion_service/: dockerfile
services/langchain_service/: Dockerfile  pyproject.toml
services/langchain_service/config/: config.py
services/langchain_service/src/: __init__.py  agent.py  api.py  app.py  main.py  models.py  notifier.py  schemas.py
services/mcp_server_service/: Dockerfile  pyproject.toml  server.py
services/mcp_server_service/config/: config.py  config.yaml
services/mcp_server_service/mongodb/config/: config.py
services/mcp_server_service/mongodb/src/: logs.py
services/mcp_server_service/qdrant/config/: config.py
services/mcp_server_service/qdrant/src/: retrieve.py
services/mcp_server_service/src/: api.py  embeddings.py  main.py  models.py  server.py
services/mlflow/: Dockerfile  README.md  README_mlflow.md  pyproject.toml
services/mlflow_service/: Dockerfile
services/monitoring_service/: monitoring_drift_check.py
services/producer_service/: README.md  dockerfile  pyproject.toml
services/redis_service/: Dockerfile  README.md
services/retraining_service/: Dockerfile  README.md  pyproject.toml
services/retraining_service/config/: settings.py
services/retraining_service/src/: __init__.py  load_features.py  retrain.py
services/streaming_service/: README.md  dockerfile  pyproject.toml
services/streaming_service/config/: config.py
services/streaming_service/src/: app.py
services/training_pipeline_service/: Dockerfile
services/training_service/: README.md  README_training_service.md  dockerfile  pyproject.toml
services/training_service/config/: __init__.py  config.py  settings.py
services/training_service/src/: README_V2_COMPLETE.md  WORKFLOW_COMPLETE.md  __init__.py  dataloader.py  evaluator.py  get_features.py  load_from_feast.py  load_from_feast_split.py  model.py  train.py  utils.py  validation.py
services/training_service/src/model/: train.py
services/vllm_service/: Dockerfile
src/: app.py  feature_engineering.py  train.py
src/get_data_streaming/: __init__.py  consumer.py  get_streaming.py  producer.py  throw_data.py
src/queue/: consumer.py  producer.py
utils/: create_offline_files.py
utils/cold_start_uitl/: Dockerfile  cold_start.py
utils/cold_start_util/: cold_start.py
utils/offline_files_util/: Dockerfile  create_offline_files.py
(+36 files in other folders)
