[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "mlflow>=2.10.0",
    "feast[redis]>=0.30.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.11.1",
    "quixstreams>=3.23.3",
    "numpy>=2.4.2",
    ]
