[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastembed-gpu>=0.7.4",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.3",
]
