[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.15",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.34.0",
    ]
