[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.0.0",              
    "uvicorn>=0.41.0",                
    "fastapi>=0.129.0",               
    "langchain-mcp-adapters>=0.2.1", 
    "einops>=0.8.2",
    "fastembed>=0.7.4",
    "flashrank>=0.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.15",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.16.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "starlette>=0.52.1",
]
