[project]
name = "Washing-Machines-Anomaly-Detection"
version = "0.1.0"
description = "Microservices architecture"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyarrow>=22.0.0",
    "quixstreams>=3.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "feast[redis]>=0.58.0",
    "python-dotenv>=1.0.0",
]
